--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.9.1",
     "daisyui": "^2.22.0",
     "dayjs": "^1.11.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
