--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@hookform/resolvers": "^2.9.7",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
